# marimo-report-builder

./: .gitignore  README.md  edit.sh  pyproject.toml  report.py  run.sh
.github/workflows/: publish-to-test-pypi.yaml  release.yaml
src/marimo_report_builder/: __init__.py  action.py  action_menu.py  catalog.py  display.py  form.py  settings.py
src/marimo_report_builder/actions/: __init__.py  clear.py  edit.py  load.py  reorder.py  save.py  view.py
src/marimo_report_builder/data_backend/: __init__.py  data_backend.py
src/marimo_report_builder/data_backend/cirro/: __init__.py  data_backend.py  helpers.py
src/marimo_report_builder/examples/display/: markdown.py  scatter_plot.py
